--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -26,8 +26,12 @@ jobs:
         run: cmake --version
       - name: Fetch Repository
         uses: actions/checkout@v3
+      - name: Configure CMake
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_INSTALL_PREFIX=/home/runner/work/
+      - name: Build C++ Library
+        run: cmake --build ${{github.workspace}}/build
       - name: Install C++ Library
-        run: sh build.sh
+        run: cd build && make install
       - name: Run Benchmark
         run: set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
       - name: Get Previous Benchmark Results
