--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,4 +68,6 @@ jobs:
         with:
           max_attempts: 3
           timeout_minutes: 15
-          command: go test ./... -v -race
+          command: |
+            export LD_LIBRARY_PATH=${{ github.workspace }}:$LD_LIBRARY_PATH
+            go test ./... -v -race
