--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -43,7 +43,7 @@ jobs:
           make install
       - name: Run Benchmark
         run: |
-          export LD_LIBRARY_PATH=${{ github.workspace }}:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=${{ github.workspace }}/lib:$LD_LIBRARY_PATH
           set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
       - name: Get Previous Benchmark Results
         uses: actions/cache@v3
