--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -24,26 +24,19 @@ jobs:
           cmake-version: '3.26.x'
       - name: Fetch Repository
         uses: actions/checkout@v3
-      - name: Build C++ Library
+      - name: Build And Install C++ Library
         run: |
+          cmake --version
           cd ${{github.workspace}}
-          ls
           mkdir build
           cd build
-          cmake --version
-          cmake -DCMAKE_INSTALL_PREFIX=${{ github.workspace }} ../
-          ls
-      - name: Install C++ Library
-        env:
-          prefix: ${{ github.workspace }}
-        run: |
-          cd ${{ github.workspace }}/build
-          ls
+          cmake ..
           make
           make install
+          ls
       - name: Run Benchmark
         run: |
-          export LD_LIBRARY_PATH=${{ github.workspace }}/lib:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=/home/runner/work/lib:$LD_LIBRARY_PATH
           set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
       - name: Get Previous Benchmark Results
         uses: actions/cache@v3
