--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,9 +35,7 @@ jobs:
           sudo make install
           ls
       - name: Run Benchmark
-        run: |
-          export LD_LIBRARY_PATH=/home/runner/work/lib:$LD_LIBRARY_PATH
-          set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
+        run: set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
       - name: Get Previous Benchmark Results
         uses: actions/cache@v3
         with:
