--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,7 +35,10 @@ jobs:
           sudo make install
           ls
       - name: Run Benchmark
-        run: set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
+        run: |
+          ls /usr/local/lib | grep libtokenizer
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
+          set -o pipefail; go test ./... -benchmem -run=^$ -bench . | tee output.txt
       - name: Get Previous Benchmark Results
         uses: actions/cache@v3
         with:
