--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.18.x, 1.19.x, 1.20.x, 1.21.x, 1.22.x]
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-13]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Install Go
